--- a/flask-redis/Containerfile
+++ b/flask-redis/Containerfile
@@ -5,7 +5,8 @@ STOPSIGNAL "SIGINT"
 
 WORKDIR /app
 COPY requirements.txt app.py /app
-RUN pip3 install -r requirements.txt
+RUN --mount=type=cache,target=/root/.cache/pip\
+ pip3 install -r requirements.txt
 
 ENTRYPOINT ["python3"]
 CMD ["app.py"]
