pipelines for both compose & pod, 2 versions

--- a/traefik-golang/Containerfile
+++ b/traefik-golang/Containerfile
@@ -1,8 +1,8 @@
-FROM --platform=$BUILDPLATFORM golang:latest AS build
+FROM --platform=$BUILDPLATFORM docker.io/library/golang:latest AS build
 
 WORKDIR /compose/hello-docker
 COPY main.go main.go
-RUN --mount=type=cache,target=/go/pkg/mod CGO_ENABLED=0 go build -o backend main.go
+RUN --mount=type=cache,target=/go/pkg/mod CGO_ENABLED=0 go build -v -ldflags "-w -s" -o backend main.go
 
 FROM scratch
 COPY --from=build /compose/hello-docker/backend /usr/local/bin/backend
