--- a/traefik-golang/compose.yaml
+++ b/traefik-golang/compose.yaml
@@ -8,7 +8,7 @@ services:
       - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:Z
     depends_on:
       - backend
   backend:
